@@ -1,3 +1,9 @@
+2012-01-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-form-make-button): Use "submit" instead for an empty
+	text, that won't be buttonized.
+	Reported by Roland Winkler <winkler@gnu.org>.
+
 2012-01-13  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-fontify-anchors, w3m-goto-url): Not encode and decode
